# sfml_2048

./: CMakeLists.txt  README.md
include/: board.hpp  board_management.hpp  game.hpp  state_management.hpp
src/: board.cpp  board_management.cpp  game.cpp  main.cpp  state_management.cpp
test/: board_management_test.cpp  test_board.cpp  test_state_management.cpp
